--- a/dashboard.html
+++ b/dashboard.html
@@ -6,11 +6,9 @@
     <title>Discord Login</title>
 </head>
 <body>
-<div id="content">
-    <h1>Se connecter avec Discord</h1>
-    <a href="https://discord.com/oauth2/authorize?client_id=1269364571236208732&response_type=code&redirect_uri=https%3A%2F%2Flegionecarlate.github.io%2Ftest%2Findex.html&scope=identify">Se connecter</a>
-</div>
-
+testestestestestestes
+<h1>Se connecter avec Discord</h1>
+<a href="https://discord.com/oauth2/authorize?client_id=1269364571236208732&response_type=token&redirect_uri=https%3A%2F%2Flegionecarlate.github.io%2Ftest%2Findex.html&scope=identify">Se connecter</a>
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const code = urlParams.get('code');
@@ -39,10 +37,13 @@
             })
             .then(response => response.json())
             .then(user => {
-                document.getElementById('content').innerHTML = `<h1>Bienvenue, ${user.username}#${user.discriminator}!</h1>`;
+                document.body.innerHTML = `<h1>Bienvenue, ${user.username}#${user.discriminator}!</h1>`;
             })
             .catch(console.error);
+    } else {
+        document.body.innerHTML = '<h1>Erreur de connexion</h1>';
     }
 </script>
 </body>
+
 </html>
