--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 'client_secret': 'xmu4zoCHo2PMIAXMXTpKTOwwz8xboXRa',
                 'grant_type': 'authorization_code',
                 'code': code,
-                'redirect_uri': 'https://discord.com/oauth2/authorize?client_id=1269364571236208732&response_type=code&redirect_uri=https%3A%2F%2Fdarkrentin.github.io%2F&scope=identify'
+                'redirect_uri': 'https://darkrentin.github.io/'
             })
         })
             .then(response => response.json())
@@ -39,7 +39,10 @@
             })
             .then(response => response.json())
             .then(user => {
-                document.getElementById('content').innerHTML = `<h1>Bienvenue, ${user.username}!</h1><a src=''>img</a>`;
+                document.getElementById('content').innerHTML = `
+                <img src="${avatarUrl}" alt="Avatar">
+                <span>${user.username}</span>
+            `;
             })
             .catch(console.error);
     }
