--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             })
             .then(response => response.json())
             .then(user => {
+                const avatarUrl = `https://cdn.discordapp.com/avatars/${user.id}/${user.avatar}.png`;
                 document.getElementById('content').innerHTML = `
                 <img src="${avatarUrl}" alt="Avatar">
                 <span>${user.username}</span>
